# ZippedCsv

./: .gitignore  README.md
.github/skills/technical-documentation-specialist/references/: markdown-best-practices.md
cpp/: CMakeLists.txt  Makefile  README.md
cpp/examples/: zcsv_append.cpp  zcsv_create.cpp  zcsv_print.cpp  zcsv_status.cpp
cpp/src/: csv.cpp  csv.h  zippedcsv.cpp  zippedcsv.h
cpp/tests/: test_csv.cpp  test_zippedcsv.cpp
js/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
js/examples/: zcsv_append.ts  zcsv_create.ts  zcsv_print.ts  zcsv_status.ts
js/examples/viewer/: index.html  main.ts  vite.config.ts  zippedcsv-browser.ts
js/src/: csv.ts  index.ts  zippedcsv.ts
js/tests/: test_csv.ts  test_zippedcsv.ts
php/: README.md
php/examples/: zcsv_append.php  zcsv_create.php  zcsv_print.php  zcsv_status.php
php/src/mc/: csv.php  zippedcsv.php
php/tests/: runner.php  tests_csv.php  tests_zippedcsv.php
python/: README.md  pyproject.toml
python/examples/: README.md  zcsv_append.py  zcsv_create.py  zcsv_print.py  zcsv_status.py
python/src/zippedcsv/: __init__.py  csv.py  zippedcsv.py
python/tests/: test_csv.py  test_zippedcsv.py
src/mc/: zippedcsv.php
