[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zippedcsv"
version = "0.1.0"
description = "Python implementation of Zipped CSV format"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
